tests/core/data/csl/TypeLoaderTests/SyntaxError/struct4.csl
// missing semicolon
struct struct4
{
	string name;
}

// 7th line

// 9th line
